fix alow overflow -y

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -55,6 +55,6 @@
     }
     body {
         @apply bg-background text-foreground;
-        @apply overflow-hidden;
+        @apply overflow-y-auto;
     }
 }
